<resources>
    <string name="app_name">Ansem</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="login_failed">"Login failed"</string>
    <string name="name">Name</string>
    <string name="login">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_again">Password Again</string>
    <string name="or">or</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="mobile_no">Phone num</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="welcome" translatable="false">"Welcome!"</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_login">Login</string>
    <string name="title_main">MainActivity</string>
    <string name="title_registration">Registration</string>
    <string name="title_motorcycle_list">Motorcycles</string>
    <string name="title_motorcycle_detail">Motorcycle Detail</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="title_request_list">Requests</string>
    <string name="title_profile">Profile</string>

    <string name="invalid_email" translatable="false">Not a valid email</string>
    <string name="invalid_first_name" translatable="false">Not a valid first name</string>
    <string name="invalid_last_name" translatable="false">Not a valid last name</string>
    <string name="invalid_country" translatable="false">Not a valid country</string>
    <string name="invalid_city" translatable="false">Not a valid city</string>
    <string name="invalid_address" translatable="false">Not a valid address</string>
    <string name="invalid_mobile_no" translatable="false">Not a valid mobile number</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_password_again" translatable="false">Passwords don\'t match</string>

    <string name="menu_logout">Logout</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="title_activity_authenticator">AuthenticatorActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="invalid_username">Not a valid username</string>

    <!-- Resources for Bank2LogInActivity -->
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="welcom_back_log_in_to_continue_with_ronnystudio_ui_for_android">Welcom back. Log in to continue with ronnystudio UI for android.</string>

    <string name="description_username">User name</string>
</resources>